--- a/design.css
+++ b/design.css
@@ -236,6 +236,10 @@ img, embed, object, video {
 }
 
 @media only screen and (max-width: 600px) {
+  
+  .media-embed {
+    width: 100%;
+  }
   .blue-box {
       background: linear-gradient(45deg, rgba(0,162,255,1) 0%,rgba(0,120,255,1) 70%,rgba(0,120,255,1) 100%);
       color: white;
